--- a/tic-tac-toe-board.html
+++ b/tic-tac-toe-board.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Tic-Tac-Toe</title>
-    <script TYPE="text/javascript">
+    <!-- <script type="text/javascript">
 
         var xTurn = true;
 
@@ -15,7 +15,7 @@
         function squareclicked(square) {
             square.textContent = "X";
         }
-    </script>
+    </script> -->
 
     <link type="text/css" rel="stylesheet" href="css/tic-tac-toe-stylesheet.css" />
 </head>
@@ -36,7 +36,7 @@
     <button id="2_2" class="boardButton" onclick="squareclicked(this);">&nbsp;</button>
     <br>
     <p id="status">x's turn</p>
-    <button>New Game</button>
+    <button onclick="newgame()">New Game</button>
 </body>
-
+<script type="text/javascript" src="JavaScript/tic-tac-toe-functions.js"></script>
 </html>
