--- a/tic-tac-toe-board.html
+++ b/tic-tac-toe-board.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <title>Tic-Tac-Toe</title>
-    <!-- <script type="text/javascript">
+    <head>
+        <title>Tic-Tac-Toe</title>
+        <!-- <script type="text/javascript">
 
         var xTurn = true;
 
@@ -16,27 +15,34 @@
             square.textContent = "X";
         }
     </script> -->
-
-    <link type="text/css" rel="stylesheet" href="css/tic-tac-toe-stylesheet.css" />
-</head>
-
-<body>
-    <h1>How to play</h1>
-    <p>Try to be the first one to make a line horizontaly, vertically, or diagonally. Good luck!</p>
-    <button id="0_0" class="boardButton" onclick="squareclicked(this);">&nbsp;</button>
-    <button id="1_0" class="boardButton" onclick="squareclicked(this);">&nbsp;</button>
-    <button id="2_0" class="boardButton" onclick="squareclicked(this);">&nbsp;</button>
-    <br>
-    <button id="0_1" class="boardButton" onclick="squareclicked(this);">&nbsp;</button>
-    <button id="1_1" class="boardButton" onclick="squareclicked(this);">&nbsp;</button>
-    <button id="2_1" class="boardButton" onclick="squareclicked(this);">&nbsp;</button>
-    <br>
-    <button id="0_2" class="boardButton" onclick="squareclicked(this);">&nbsp;</button>
-    <button id="1_2" class="boardButton" onclick="squareclicked(this);">&nbsp;</button>
-    <button id="2_2" class="boardButton" onclick="squareclicked(this);">&nbsp;</button>
-    <br>
-    <p id="status">x's turn</p>
-    <button onclick="newgame()">New Game</button>
-</body>
-<script type="text/javascript" src="JavaScript/tic-tac-toe-functions.js"></script>
+        <link type="text/css" rel="stylesheet" href="css/tic-tac-toe-stylesheet.css"/>
+    </head>
+    <body>
+        <div class="main">
+            <table>
+                <tr>
+                    <td class="cell" id="0"></td>
+                    <td class="cell" id="1"></td>
+                    <td class="cell" id="2"></td>
+                </tr>
+                <tr>
+                    <td class="cell" id="3"></td>
+                    <td class="cell" id="4"></td>
+                    <td class="cell" id="5"></td>
+                </tr>
+                <tr>
+                    <td class="cell" id="6"></td>
+                    <td class="cell" id="7"></td>
+                    <td class="cell" id="8"></td>
+                </tr>
+            </table>
+            <p>choose</p>
+            <div class="options">
+                <div class="dots"></div>
+                <div class="dots2"></div>
+            </div>
+        </div>
+    </body>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script type="text/javascript" src="JavaScript/tic-tac-toe-functions.js"></script>
 </html>
