--- a/tic-tac-toe-board.html
+++ b/tic-tac-toe-board.html
@@ -21,19 +21,19 @@
         <div class="main">
             <table>
                 <tr>
-                    <td class="cell" id="0"></td>
-                    <td class="cell" id="1"></td>
-                    <td class="cell" id="2"></td>
+                    <td class="cell no-border" id="0"></td>
+                    <td class="cell no-horiz-border" id="1"></td>
+                    <td class="cell no-border" id="2"></td>
                 </tr>
                 <tr>
-                    <td class="cell" id="3"></td>
+                    <td class="cell no-vert-border" id="3"></td>
                     <td class="cell" id="4"></td>
-                    <td class="cell" id="5"></td>
+                    <td class="cell no-vert-border" id="5"></td>
                 </tr>
                 <tr>
-                    <td class="cell" id="6"></td>
-                    <td class="cell" id="7"></td>
-                    <td class="cell" id="8"></td>
+                    <td class="cell no-border" id="6"></td>
+                    <td class="cell no-horiz-border" id="7"></td>
+                    <td class="cell no-border" id="8"></td>
                 </tr>
             </table>
         </div>
