--- a/tic-tac-toe-board.html
+++ b/tic-tac-toe-board.html
@@ -36,6 +36,7 @@
                     <td class="cell no-border" id="8"></td>
                 </tr>
             </table>
+             <button onclick=reset()>New Game</button>
         </div>
     </body>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
