--- a/tic-tac-toe-board.html
+++ b/tic-tac-toe-board.html
@@ -36,6 +36,7 @@
                     <td class="cell no-border" id="8"></td>
                 </tr>
             </table>
+            <p class="status">X's Turn</p>
              <button onclick=reset()>New Game</button>
         </div>
     </body>
