--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             square.textContent = "X";
         }
     </script> -->
-        <link type="text/css" rel="stylesheet" href="css/tic-tac-toe-stylesheet.css"/>
+        <link type="text/css" rel="stylesheet" href="styles.css"/>
     </head>
     <body>
         <div class="main">
@@ -41,5 +41,5 @@
         </div>
     </body>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script type="text/javascript" src="JavaScript/tic-tac-toe-functions.js"></script>
+    <script type="text/javascript" src="scripts.js"></script>
 </html>
